--- a/src/sass/partials/_elements.scss
+++ b/src/sass/partials/_elements.scss
@@ -35,9 +35,11 @@ input, select {
   border-radius: $radius;
   padding: $base-size;
 
+  // CODE ADDED START
   &.error {
     border-color: $color-main;
   }
+  // CODE ADDED END
 }
 
 .checkbox {
