--- a/src/sass/partials/_booking.scss
+++ b/src/sass/partials/_booking.scss
@@ -1,90 +1,86 @@
 
 #pages {
-    > * {
+  > * {
+    display: none;
+  }
+
+  > .active {
+    display: block;
+  }
+}
+
+.booking-widget {
+  transform: opacity 500ms;
+
+  &.loading {
+    opacity: 0.25;
+  }
+}
+
+.booking-wrapper {
+  margin: ($base-size * 3.5) auto;
+  padding: ($base-size * 6) ($base-size * 4);
+  background: $color-light;
+  border-bottom: 1px solid lighten($color-dark, 70%);
+  border-radius: $radius;
+}
+
+.booking-option-title {
+  @extend .h2;
+  display: block;
+  margin: 0 0 ($base-size * 2) 0;
+
+  > .widget-amount {
+    margin: ($base-size * 2) 0 0 0;
+  }
+}
+
+.page__title {
+  @extend .h1;
+  margin: 0 0 ($base-size * 4) 0;
+  text-align: center;
+}
+
+.time-picker {
+  @include flex(row, flex-start, space-between);
+  margin: 0 0 ($base-size * 4) 0;
+}
+
+.hour-picker {
+  position: relative;
+  width: 50%;
+
+  .output {
+    position: absolute;
+    right: 0;
+  }
+}
+
+.rangeSlider {
+  top: $base-size;
+  background: lighten($color-dark, 70%);
+  box-shadow: none;
+  height: $base-size;
+
+  &__handle {
+    box-shadow: none;
+    border: 0;
+    transition-timing-function: cubic-bezier(0, 1, 0, 1);
+    transition: transform 100ms;
+
+    &::after {
       display: none;
     }
 
-    > .active {
-      display: block;
-    }
-  }
-
-  .booking-widget {
-    transform: opacity 500ms;
-
-    &.loading {
-      opacity: 0.25;
-    }
-  }
-
-  .booking-wrapper {
-    margin: ($base-size * 3.5) auto;
-    padding: ($base-size * 6) ($base-size * 4);
-    background: $color-light;
-    border-bottom: 1px solid lighten($color-dark, 70%);
-    border-radius: $radius;
-  }
-
-  .booking-option-title {
-    @extend .h2;
-    display: block;
-    margin: 0 0 ($base-size * 2) 0;
-
-    > .widget-amount {
-      margin: ($base-size * 2) 0 0 0;
-    }
-
-  }
-
-  .page__title {
-    @extend .h1;
-    margin: 0 0 ($base-size * 4) 0;
-    text-align: center;
-  }
-
-  .time-picker {
-    @include flex(row, flex-start, space-between);
-    margin: 0 0 ($base-size * 4) 0;
-  }
-
-  .hour-picker {
-    position: relative;
-    width: 50%;
-
-    .output {
-      position: absolute;
-      right: 0;
-    }
-
-  }
-
-  .rangeSlider {
-    top: $base-size;
-    background: lighten($color-dark, 70%);
-    box-shadow: none;
-    height: $base-size;
-
-    &__handle {
-      box-shadow: none;
-      border: 0;
-      transition-timing-function: cubic-bezier(0, 1, 0, 1);
-      transition: transform 100ms;
-
-      &::after {
-        display: none;
-      }
-
-      &__horizontal {
-        width: ($base-size * 2);
-        height: ($base-size * 2);
-        top: -6px;
-        background: $color-dark;
-      }
-
+    &__horizontal {
+      width: ($base-size * 2);
+      height: ($base-size * 2);
+      top: -6px;
+      background: $color-dark;
     }
 
     &__fill {
-      background: $color-success;
+      background: #00B74A;
       transition-timing-function: cubic-bezier(0, 1, 0, 1);
       transition: width 100ms;
       box-shadow: none;
@@ -153,9 +149,9 @@
         border-radius: 50%;
 
         &::after {
+
           border-radius: 50%;
         }
-
       }
 
       &.booked {
@@ -163,6 +159,7 @@
         color: lighten($color-dark, 40%);
 
         &::after {
+
           position: absolute;
           content: '';
           width: 100%;
@@ -172,7 +169,6 @@
           background: $color-dark;
           opacity: 0.4;
         }
-
       }
     }
 
@@ -199,3 +195,4 @@
     @include flex(row, flex-start, space-between);
     margin: ($base-size * 4) auto;
   }
+}
