--- a/src/sass/partials/_product.scss
+++ b/src/sass/partials/_product.scss
@@ -1,11 +1,9 @@
-
-
 .product-list {
   padding: ($base-size * 3) 0;
 }
 
 .product {
-  margin: /*($base-size / 2)*/ 0;
+  margin: ($base-size / 2) 0;
   padding: ($base-size * 6) ($base-size * 4);
   background: $color-light;
   border-bottom: 1px solid lighten($color-dark, 70%);
@@ -32,6 +30,7 @@
   }
 
   &__base-price {
+    @extend .h1;
     font-weight: $font-light;
   }
 
@@ -74,7 +73,7 @@
     height: 350px;
     opacity: 0;
     transition: opacity 200ms;
-    
+
     &.small {
       width: 220px;
       height: 220px;
@@ -113,7 +112,7 @@
     width: 30px;
     height: 30px;
     text-align: center;
-    margin: 0 /*($base-size / 2)*/;
+    margin: 0 ($base-size / 2);
     padding: 0;
   }
 }
