--- a/src/sass/partials/_booking.scss
+++ b/src/sass/partials/_booking.scss
@@ -154,10 +154,16 @@
         }
 
       }
+      &.selected {
+        cursor: not-allowed;
+        background-color: lighten(#2ecc71, 40%);
+        border: 1px solid lighten($color-dark, 70%);
+      }
 
       &.booked {
         cursor: not-allowed;
         color: lighten($color-dark, 40%);
+
 
         &::after {
           position: absolute;
